[project]
name = "bookstore"
version = "0.1.0"
description = ""
authors = [
    {name = "Nicolas Oliveira Mor",email = "nicolasoliveiramor05@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "djangorestframework (>=3.16.1,<4.0.0)",
    "django-rest-framework (>=0.1.0,<0.2.0)",
    "django (>=5.2.5,<6.0.0)"
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
factory-boy = "^3.3.3"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
