[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "projeto bookstore"
authors = ["Nicolas <nicolasoliveiramor05@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12.1"
django = ">=5.2.5,<6.0.0"
djangorestframework = ">=3.16.1,<4.0.0"
django-extensions = ">=4.1,<5.0"
django-debug-toolbar = ">=6.0.0,<7.0.0"
pytest-django = ">=4.11.1,<5.0.0"
psycopg2-binary = "^2.9.10"
flake8 = "^7.3.0"

[tool.poetry.group.dev.dependencies]
factory-boy = "^3.3.3"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"